@@ -1,7 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST =	acconfig.h	\
-		acinclude.m4i	\
+EXTRA_DIST =	acinclude.m4i	\
 		config.guess	\
 		config.sub	\
 		install-sh	\
@@ -10,7 +9,3 @@ EXTRA_DIST =	acconfig.h	\
 		ltmain.sh	\
 		missing		\
 		mkinstalldirs
-
-$(top_srcdir)/acconfig.h: $(srcdir)/acconfig.h
-	@-rm -f $@
-	cd $(top_srcdir) && $(LN_S) config/acconfig.h acconfig.h
