@@ -1,5 +1,7 @@
 1999-09-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* config/Makefile.am: Remove all traces of acconfig.h.
+
 	* server-src/changer.c (changer_command): Fix for amwait_t != int.
 
 1999-09-13  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
@@ -400,7 +402,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.270 1999/09/14 03:21:58 oliva Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.271 1999/09/14 05:38:03 oliva Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
